Revert MainApp but kept the tests and improve test for Main